# carbonize

./: .gitattributes  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.md  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  run.py  setup.py  test.py  tox.ini  update_data.py
.github/workflows/: codeql.yml  mypy.yml  tests.yml
carbonize/: __init__.py  api.py  calculators.py  catalogs.py  type_definitions.py  types.py  typing.py  utils.py
carbonize/calculators/: __init__.py  base.py  cars.py  flights.py  trains.py  webinars.py
carbonize/data/: __init__.py  iata_airports.csv  iata_airports.pkl  icao_aircraft_codes.csv  icao_aircraft_codes.json  icao_aircrafts.pkl  icao_airport_city_codes.csv  icao_airport_city_codes.json  icao_fuel_consumption.csv  icao_fuel_consumption.json  icao_load_factors.csv  icao_load_factors.json  icao_load_factors.pkl
carbonize/data/parsers/: __init__.py  iata_parser.py  icao_parser.py
docs/: api.rst  conf.py  index.rst  quickstart.rst
docs/calculators/: cars.rst  flights.rst  index.rst  trains.rst  webinars.rst
tests/: test_api.py  test_calculators.py  test_calculators_cars.py  test_calculators_flights.py  test_calculators_trains.py  test_calculators_webinars.py  test_catalogs.py  test_data_parsers.py
